swiper overflow fix

--- a/components/applicationCard/applicationCard.module.css
+++ b/components/applicationCard/applicationCard.module.css
@@ -158,6 +158,8 @@
     margin-bottom: calc(var(--spacing-unit) * 5);
     width: 100%;
     height: auto;
+    max-width: 100%;
+    overflow: hidden;
 
     @media (--tablet) {
         grid-column: 2/12;
@@ -195,6 +197,13 @@
 .carouselSlide {
     text-align: center;
     background: transparent;
+    /* Swiper context fixes */
+    /* https://github.com/nolimits4web/swiper/issues/3599 */
+    width: auto;
+    flex-shrink: 0;
+    display: block;
+    height: 100%;
+    max-height: 100%;
 }
 
 .carouselSlide img {
